examples/errors/parsing/fun_simple-no-name.cn
fun : Int -> Int [pure] = {
  n -> n
}

main : () [impure] = ()
